fix: only retrieve fresh GATEWAY_STARTED events (under 5minutes)
(cherry picked from commit 6f24d38be6343f53d8871c61c388a9c33b6d6a43)